{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 107,
  "lineage": "79a0d99c-1f08-7efd-fca5-f977cf7056af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "obligatorio-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:route-table/rtb-08a123321f59be29f",
            "default_route_table_id": "rtb-08a123321f59be29f",
            "id": "rtb-08a123321f59be29f",
            "owner_id": "254753841475",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b99942125972d0cb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Salida a internet"
            },
            "tags_all": {
              "Name": "Salida a internet"
            },
            "vpc_id": "vpc-0c016b43fdd3c6941"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig_obligatorio",
            "aws_vpc.VPC_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:internet-gateway/igw-0b99942125972d0cb",
            "id": "igw-0b99942125972d0cb",
            "owner_id": "254753841475",
            "vpc_id": "vpc-0c016b43fdd3c6941"
          },
          "dependencies": [
            "aws_vpc.VPC_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:security-group/sg-04ec0790bd347f237",
            "description": "HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ec0790bd347f237",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eks-sg",
            "name_prefix": "",
            "owner_id": "254753841475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-sg"
            },
            "tags_all": {
              "Name": "eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c016b43fdd3c6941"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:security-group/sg-078f12d9eba13b17c",
            "description": "Allow mysql inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078f12d9eba13b17c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "mysql from kubernetes",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ec0790bd347f237"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "254753841475",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c016b43fdd3c6941"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks-sg",
            "aws_vpc.VPC_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-subnet-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:subnet/subnet-0eeb04fbe20a895a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0eeb04fbe20a895a6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "254753841475",
            "tags": {
              "Name": "VPC US-East-1a",
              "resource": "kubernetes.io/cluster/app-cluster"
            },
            "tags_all": {
              "Name": "VPC US-East-1a",
              "resource": "kubernetes.io/cluster/app-cluster"
            },
            "vpc_id": "vpc-0c016b43fdd3c6941"
          },
          "dependencies": [
            "aws_vpc.VPC_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-subnet-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:subnet/subnet-0550f71c4ff484b8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-0550f71c4ff484b8e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "254753841475",
            "tags": {
              "Name": "VPC US-east-1b",
              "resource": "kubernetes.io/cluster/app-cluster"
            },
            "tags_all": {
              "Name": "VPC US-east-1b",
              "resource": "kubernetes.io/cluster/app-cluster"
            },
            "vpc_id": "vpc-0c016b43fdd3c6941"
          },
          "dependencies": [
            "aws_vpc.VPC_obligatorio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_obligatorio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254753841475:vpc/vpc-0c016b43fdd3c6941",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-080c87863172e6d8b",
            "default_route_table_id": "rtb-08a123321f59be29f",
            "default_security_group_id": "sg-06a5c4cbecc7ec802",
            "dhcp_options_id": "dopt-acd586d6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c016b43fdd3c6941",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08a123321f59be29f",
            "owner_id": "254753841475"
          }
        }
      ]
    }
  ]
}